--- a/AntRunner1.0/AboutWin.xaml
+++ b/AntRunner1.0/AboutWin.xaml
@@ -1,10 +1,12 @@
 ﻿<Window x:Class="AntRunner.AboutWin"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="About Us" Height="209.488" Width="383.024" WindowStyle="ToolWindow" ResizeMode="NoResize">
+        Title="About Us" Height="330.888" Width="574.224" WindowStyle="ToolWindow" ResizeMode="NoResize">
     <Grid>
-        <Image Height="60"  Margin="0,41,0,0" Name="image1" Stretch="Uniform" Source="/AntRunner;component/0030110064.jpg"  Width="60" VerticalAlignment="Top" />
-        <TextBlock Height="23"   Margin="0,106,0,0" Text="Antenna Runner 1.0" VerticalAlignment="Top" HorizontalAlignment="Center" FontWeight="Bold"/>
-        <TextBlock   Margin="0,150,0,0" Text="Copyright (C) 2017 XIN. All Rights Reserved." Foreground="Gray" VerticalAlignment="Top" HorizontalAlignment="Center" />
+        <Image Height="110"  Margin="119,72,0,0" Name="image1" Stretch="Uniform" Source="/AntRunner;component/0030110064.jpg" VerticalAlignment="Top" HorizontalAlignment="Left"/>
+        <Image Height="127"  Margin="327,63,0,0" Name="image2" Stretch="Uniform" Source="/AntRunner;component/support.jpg" VerticalAlignment="Top" HorizontalAlignment="Left"/>
+        <TextBlock Height="23"   Margin="115,196,333,0" Text="Antenna Runner 1.0" VerticalAlignment="Top" HorizontalAlignment="Center" FontWeight="Bold"/>
+        <TextBlock Height="23"   Margin="336,196,123,0" Text="Technical Support" VerticalAlignment="Top" HorizontalAlignment="Center" FontWeight="Bold"/>
+        <TextBlock   Margin="0,150,0,20" Text="Copyright (C) 2019 XIN. All Rights Reserved." Foreground="Gray" VerticalAlignment="Bottom" HorizontalAlignment="Center" />
     </Grid>
 </Window>
