--- a/AntRunner1.0/AboutWin.xaml
+++ b/AntRunner1.0/AboutWin.xaml
@@ -1,17 +1,66 @@
 ﻿<Window x:Class="AntRunner.AboutWin"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="About us" Height="296.185" Width="462.045" WindowStyle="ToolWindow" ResizeMode="NoResize">
+        xmlns:shell="clr-namespace:Microsoft.Windows.Shell;assembly=Microsoft.Windows.Shell"
+        Title="About us" Height="300" Width="485.4" WindowStyle="ToolWindow" ResizeMode="NoResize">
+    <shell:WindowChrome.WindowChrome>
+        <shell:WindowChrome GlassFrameThickness="3" ResizeBorderThickness="6" CaptionHeight="300"
+              CornerRadius="5" UseAeroCaptionButtons="False"/>
+    </shell:WindowChrome.WindowChrome>
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="200*"/>
             <RowDefinition Height="30"/>
         </Grid.RowDefinitions>
-        <Image Height="110" Source="logo.ico" Stretch="Uniform" VerticalAlignment="Center" HorizontalAlignment="Center">
+        <Grid Background="#FF106455" Height="30">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="179*"/>
+                <ColumnDefinition Width="30"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Margin="7,8,6.2,6.4" VerticalAlignment="Center" Foreground="White" FontWeight="Bold" Grid.ColumnSpan="2">About Us</TextBlock>
+            <Button Name="bdr"  BorderBrush="LightGray" BorderThickness="0" 
+                    Height="30" Width="30" Grid.Column="1" Margin="0"  
+                    shell:WindowChrome.IsHitTestVisibleInChrome="True" Click="Button_Click">
+                <Button.Template>
+                    <ControlTemplate TargetType="Button">
+                        <Border Name="grid" Background="#FF116B61" Opacity="0.95" BorderThickness="1" Margin="0">
+                            <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,0" 
+                                       Foreground="Red" Name="label1" Text="×" FontSize="20" FontWeight="Bold" >
+                            </TextBlock>
+                        </Border>
+                        <ControlTemplate.Triggers >
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Trigger.EnterActions>
+                                    <BeginStoryboard >
+                                        <Storyboard>
+                                            <ColorAnimation Storyboard.TargetName="grid" Storyboard.TargetProperty="(Grid.Background).(SolidColorBrush.Color)" From="#FF116B61" To="Red" Duration="0:0:0.4" />
+                                            <ColorAnimation Storyboard.TargetName="label1" Storyboard.TargetProperty="(TextBlock.Foreground).(SolidColorBrush.Color)" From="Red" To="White" Duration="0:0:0.4" />
+                                        </Storyboard>
+                                    </BeginStoryboard>
+                                </Trigger.EnterActions>
+                                <Trigger.ExitActions>
+                                    <BeginStoryboard >
+                                        <Storyboard>
+                                            <ColorAnimation Storyboard.TargetName="grid" Storyboard.TargetProperty="(Grid.Background).(SolidColorBrush.Color)" From="Red" To="#FF116B61" Duration="0:0:0.4" />
+                                            <ColorAnimation Storyboard.TargetName="label1" Storyboard.TargetProperty="(TextBlock.Foreground).(SolidColorBrush.Color)" From="White" To="Red" Duration="0:0:0.4"/>
+                                        </Storyboard>
+                                    </BeginStoryboard>
+                                </Trigger.ExitActions>
+                            </Trigger>
+                            <Trigger Property="IsPressed" Value="True">
+                                <Setter TargetName="grid" Property="BorderThickness" Value="3"></Setter>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Button.Template>
+            </Button>
+        </Grid>
+        <Image Grid.Row="1"  Height="110" Source="logo.ico" Stretch="Uniform" VerticalAlignment="Center" HorizontalAlignment="Center">
         </Image>
-        <Image Height="127"  Name="image2" Stretch="Uniform"  Opacity="0"
+        <Image Height="127"  Name="image2" Stretch="Uniform"  Opacity="0" Grid.Row="1" 
                Source="/AntRunner;component/support.jpg" VerticalAlignment="Center" 
-               HorizontalAlignment="Center">
+               HorizontalAlignment="Center" shell:WindowChrome.IsHitTestVisibleInChrome="True">
             <Image.Triggers>
                 <EventTrigger RoutedEvent="MouseEnter">
                     <BeginStoryboard>
@@ -31,12 +80,15 @@
                 </EventTrigger>
             </Image.Triggers>
         </Image>
-        <TextBlock Name="blk1"  Text="Antenna Runner 1.0" 
+        <TextBlock Name="blk1"  Text="Antenna Runner 1.0" Grid.Row="1" 
                    VerticalAlignment="Top" HorizontalAlignment="Center" FontWeight="Bold" Margin="168,182,167,0"/>
-        <StackPanel Orientation="Horizontal"  VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Row="1" >
-            <TextBlock Text="Copyright " Foreground="Gray"/>
-            <TextBlock Name="tipTime" Text="©" Foreground="Gray"/>
-            <TextBlock Text=" 2019 GLY All Rights Reserved." Foreground="Gray"/>
-        </StackPanel>
+
+        <Border Grid.Row="2" BorderBrush="LightGray" BorderThickness="0,1,0,0">
+            <StackPanel Orientation="Horizontal"  VerticalAlignment="Center" HorizontalAlignment="Center" >
+                <TextBlock Text="Copyright " Foreground="Gray"/>
+                <TextBlock Name="tipTime" Text="©" Foreground="Gray"/>
+                <TextBlock Text=" 2019 GLY All Rights Reserved." Foreground="Gray"/>
+            </StackPanel>
+        </Border>
     </Grid>
 </Window>
